--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #body {
-  background-image: linear-gradient(to bottom, red, blue);
+  background-image: linear-gradient(to right, red, blue);
 }
 
 
