--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 /* Create a top navigation bar with a black background color  */
 .topnav {
+  width: 100%;
+  height: 50px;
   background-color: #333;
   overflow: hidden;
 }
