--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 .topnav {
   width: 100%;
   height: 50px;
-  background-color: #333;
   overflow: hidden;
 }
 
@@ -23,14 +22,12 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: cyan;
 }
 
 /* Create a right-aligned (split) link inside the navigation bar */
 .topnav a.split {
   float: right;
-  background-color: #04AA6D;
   color: white;
 }
 
